plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.165' // Updated to NeoGradle userdev plugin
}

version = mod_version
group = mod_group_id

repositories {
    maven {
        name = 'GeckoLib'
        url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup("software.bernie.geckolib")
        }
    }
    maven {
        name = 'NeoForge'
        url = 'https://maven.neoforged.net/releases'
    }
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // Use Java 21 as required by Minecraft 1.21+
    }
}

dependencies {
    implementation 'net.neoforged:neoforge:21.1.72'
    implementation "software.bernie.geckolib:geckolib-common-${minecraft_version}:${geckolib_version}"
    implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
    implementation 'org.nanohttpd:nanohttpd:2.2.0'
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
    implementation "io.github.llamalad7:mixinextras-common:0.3.5"
    annotationProcessor "io.github.llamalad7:mixinextras-common:0.3.5"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

tasks.named('test') {
    useJUnitPlatform()
    def flowerTestRunDir = layout.buildDirectory.dir('test-run')
    workingDir flowerTestRunDir
    systemProperty 'britannia.projectDir', projectDir.absolutePath
    doFirst {
        flowerTestRunDir.get().asFile.mkdirs()
    }
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

runs {
    client {
        workingDirectory = file("run")
        systemProperty "neoforge.enabledGameTestNamespaces", mod_id
        arguments "--username", "Dev"
        dependencies {
            runtime 'org.nanohttpd:nanohttpd:2.2.0'
        }
    }

    server {
        workingDirectory = file("run/server")
        arguments "--nogui"
        systemProperty "neoforge.enabledGameTestNamespaces", mod_id
        dependencies {
            runtime 'org.nanohttpd:nanohttpd:2.2.0'
        }
    }

    gameTestServer {
        workingDirectory = file("run/gametest")
        systemProperty "neoforge.enabledGameTestNamespaces", mod_id
        dependencies {
            runtime 'org.nanohttpd:nanohttpd:2.2.0'
        }
    }


    configureEach {
        systemProperty "forge.logging.markers", "REGISTRIES"
        // Bank item identity and the cheque link once had to be switched on here, because
        // BankItemEnvelopeVersion's compiled-in default was 1 while dev runs already pointed at
        // a local Rails that accepted both. That default is now full capability, so dev runs
        // get them unaided -- and pinning a value here would only create a way for dev to drift
        // from what a built jar does. Set it in one run config if you ever need to test a
        // downgrade against an older Rails.
        logging.captureStandardOutput(LogLevel.DEBUG)
    }
}

jarJar {

    dependencies {
        // Add GeckoLib to be included inside the Jar using Jar-in-Jar
                if (!project.hasProperty('dev')) {
        jarJar "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
                }
                                 jarJar "org.nanohttpd:nanohttpd:2.2.0"
    }
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources', 'src/generated/resources', 'build/generated/gametest']
            // Owner working backup only; never package retired shrine textures.
            exclude 'assets/britannia_mod/textures/block/shrine/old/**'
            // Blockbench editor sources; never loaded at runtime, keep them out of the jar.
            exclude '**/*.bbmodel'
        }
    }
    scaffold {
        java.srcDir 'tools/scaffold'
        compileClasspath += sourceSets.main.output + configurations.compileClasspath
        runtimeClasspath += output + compileClasspath
    }
    test {
        compileClasspath += sourceSets.scaffold.output
        runtimeClasspath += sourceSets.scaffold.output
    }
}

configurations {
    scaffoldImplementation.extendsFrom implementation
    scaffoldCompileOnly.extendsFrom compileOnly
}

tasks.named('compileTestJava') {
    dependsOn tasks.named('scaffoldClasses')
}

tasks.register('scaffoldBanners', JavaExec) {
    group = 'banner dyeing'
    description = 'Generate or verify the Milestone 4 banner catalogue scaffold.'
    dependsOn tasks.named('scaffoldClasses')
    classpath = sourceSets.scaffold.runtimeClasspath
    mainClass = 'com.seggellion.britannia_mod.tools.BannerScaffoldTool'
    workingDir = projectDir
    def suppliedArgs = providers.gradleProperty('bannerScaffoldArgs').getOrElse('').trim()
    if (!suppliedArgs.isEmpty()) {
        args suppliedArgs.split('\\s+')
    }
}

tasks.register('generateServiceNpcSpawnGameTestStructure') {
    def encodedStructure = layout.projectDirectory.file('src/gametest/service_npc_spawn_test_empty.nbt.b64')
    def generatedStructure = layout.buildDirectory.file(
            'generated/gametest/data/britannia_mod/structure/service_npc_spawn_test_empty.nbt')
    inputs.file encodedStructure
    outputs.file generatedStructure
    doLast {
        def outputFile = generatedStructure.get().asFile
        outputFile.parentFile.mkdirs()
        outputFile.bytes = Base64.decoder.decode(encodedStructure.asFile.text.trim())
    }
}

tasks.register('validateTrainingDummyGeo') {
    group = 'verification'
    description = 'Fail early when a Blockbench export is incompatible with GeckoLib 4.6.6.'
    def geometryFile = layout.projectDirectory.file(
            'src/main/resources/assets/britannia_mod/geo/training_dummy.geo.json')
    inputs.file geometryFile
    doLast {
        def root = new groovy.json.JsonSlurper().parse(geometryFile.asFile)
        if (root.format_version != '1.12.0') {
            throw new GradleException(
                    "training_dummy.geo.json uses format_version '${root.format_version}'. " +
                    "GeckoLib 4.6.6 requires 1.12.0. Run: " +
                    "powershell -ExecutionPolicy Bypass -File tools/new-assets/normalize_training_dummy_geo.ps1")
        }
        def geometry = root['minecraft:geometry']?.getAt(0)
        if (geometry?.description?.identifier != 'geometry.training_dummy') {
            throw new GradleException(
                    "training_dummy.geo.json must use identifier 'geometry.training_dummy'. Run the normalizer task.")
        }
        def cubes = geometry?.bones?.collectMany { bone -> bone.cubes ?: [] } ?: []
        def minY = cubes.collect { cube -> (cube.origin[1] as BigDecimal) }.min()
        if (minY == null || minY < 0) {
            throw new GradleException(
                    "training_dummy.geo.json extends below Y=0 (minY=${minY}). Run the normalizer task.")
        }
        def sack = geometry?.bones?.find { bone -> bone.name == 'sack2' }
        def arrow = sack?.cubes?.find { cube ->
            cube.size?.getAt(2) == 0 &&
                    cube.uv?.north?.uv?.getAt(0) == 64 &&
                    cube.uv?.north?.uv?.getAt(1) == 0
        }
        def sackBody = sack?.cubes?.find { cube -> cube.size == [10, 13, 8] }
        def arrowFaces = arrow?.uv?.keySet() as Set
        def decalGap = arrow != null && sackBody != null
                ? (sackBody.origin[2] as BigDecimal) - (arrow.origin[2] as BigDecimal)
                : null
        if (arrowFaces != ['north'] as Set || decalGap == null || decalGap < 0.1) {
            throw new GradleException(
                    "training_dummy.geo.json arrow decal can z-fight with the sack " +
                    "(faces=${arrowFaces}, gap=${decalGap}). Run the Training Dummy GEO normalizer.")
        }
    }
}

tasks.named('processResources') {
    dependsOn tasks.named('generateServiceNpcSpawnGameTestStructure')
    dependsOn tasks.named('validateTrainingDummyGeo')
}

tasks.named('jar', Jar) {
    exclude 'com/seggellion/britannia_mod/gametest/**'
    exclude 'data/britannia_mod/structure/service_npc_spawn_test_empty.nbt'
}

tasks.register("generateModMetadata", ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
